--- a/Views/Shared/Game.cshtml
+++ b/Views/Shared/Game.cshtml
@@ -31,12 +31,13 @@
                 </tbody>
             </table>
         </div>
-        <span id="answer"></span>
+
     </div>
     <input type="text" />
     <button type="button">Submit</button>
     <button type="button" id="next">Next</button>
     <button type="button" id="seeAnswer">See Answer</button>
+    <div id="answer"></div>
     <div class="bars">
         <div class="progress" style="height: 40px;">
             @{
