--- a/Views/Shared/Game.cshtml
+++ b/Views/Shared/Game.cshtml
@@ -125,7 +125,7 @@
     var answerBtn = document.getElementById('seeAnswer');
     answerBtn.addEventListener("click", () => {
         var answerSpan = document.getElementById("answer");
-        answerSpan.innerText = @answer;
+        answerSpan.innerHTML = @answer;
     }
 
 </script>
