--- a/Views/Shared/Game.cshtml
+++ b/Views/Shared/Game.cshtml
@@ -92,6 +92,9 @@
             foodHandler.grayOutFoods();
             gotAnswer = true;
         }
+        else if (isCorrect && !gotAnswer) {
+
+        }
         else
             gameHandler.displayIncorrectIndicator();
 
