--- a/Views/Shared/Game.cshtml
+++ b/Views/Shared/Game.cshtml
@@ -92,7 +92,7 @@
             foodHandler.grayOutFoods();
             gotAnswer = true;
         }
-        else if (isCorrect && !gotAnswer) {
+        else if (isCorrect && gotAnswer) {
 
         }
         else
