--- a/Views/Shared/Game.cshtml
+++ b/Views/Shared/Game.cshtml
@@ -4,7 +4,7 @@
         <h2 id="correct">Correct!</h2>
         <h2 id="incorrect">Incorrect</h2>
         @{ var problem = (ProblemModel)ViewData["problem"]; }
-
+        <h1>Algebread</h1>
         <h2>Question Worth: $ @problem.payment</h2>
         @{
             var bank = ViewData["bank"] == null ? 0 : ViewData["bank"];
